# RecFormer

./: .gitignore  README.md  REPRO.md  mind_finetuning_log.md  pyproject.toml  recbole_baseline_config.yaml  recbole_inference_config.yaml  requirements.txt  run.py  run_baseline.job  run_inference.job
RESULTS/: run_FDSA_instruments.out  run_SASREC_scientific.out  run_fdsa_scientific.out  run_sasrec_instruments.out  run_unisrec_Instruments.out
configs/: FDSA.yaml  SASRec.yaml  UniSRec.yaml  finetune.yaml  finetune_olddata.yaml  mind_bert4rec_config.yaml  mind_fdsa_config.yaml  mind_sasrec_config.yaml  mind_unisrec_config.yaml  mind_unisrec_simple.yaml  recbole_baseline_config.yaml  recbole_baseline_config_FDSA.yaml  recbole_baseline_config_unisrec.yaml  recbole_finetune_config.yaml
data/: dataloader.py  dataset.py  transform.py
job_scripts/: run_baseline.job
jobs/: convert_data.job  finetune_recformer_amazon_optimized.job  finetune_recformer_mind.job  finetune_recformer_mind_onthefly.job  finetune_recformer_mind_optimized.job  install.job  install_h100.job  process_data.job  run_baseline.job  run_baseline_distributed.job  run_baseline_mig.job  run_baseline_mig_diversity.job  run_baselines_mind.job  run_bert4rec_mind.job  run_fdsa_mind.job  run_finetune.job  run_mini_test.job  run_sasrec_mind.job  run_unisrec_mind.job
md files/: H100_COMPATIBILITY_GUIDE.md  MIND_BASELINE_README.md  PERFORMANCE_README.md  mind_finetuning_log.md  report.md
models/: fdsa.py
python_scripts/: OLD_run_diversity.py  collator.py  compare_mind_results.py  convert_data_to_recbole.py  (+18 more)
(+5 files in other folders)
