[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "recformer_reproduction_repo"
version = "0.1.0"
requires-python = ">=3.10" # uv venv will pick the specific 3.10.10
dependencies = [
    "torch==2.0.0",          
    "pytorch-lightning==2.0.0",
    "transformers==4.28.0",
    "deepspeed==0.9.0",
    "recbole"                
                             
]