[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "recformer_reproduction_repo"
version = "0.1.0"
requires-python = ">=3.10" # uv venv will pick the specific 3.10.10
dependencies = [
    "torch>=2.1.0",          # Updated for H100 support (sm_90)
    "pytorch-lightning>=2.0.0",
    "transformers==4.28.0",
    "deepspeed>=0.10.0",     # Updated for better H100 compatibility
    "recbole",
    "numpy<2.0.0",           # To avoid bool8 deprecation
    "ray[tune]<2.7.0",       # To ensure compatibility with numpy
    "tensorboardX"           # Required for ray tune logging
]

[tool.hatch.build.targets.wheel]
packages = ["python_scripts"]